Fix z-index problem of button

--- a/src/app.css
+++ b/src/app.css
@@ -84,6 +84,10 @@ body {
     position: relative;
 }
 
+.button.header-nav__button {
+    z-index:6;
+}
+
 .button:hover {
     opacity: 0.5;
 }
